[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/SideMenu/GroundTileSelectorButton.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SideMenu/GroundTileSelectorPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SingleTileDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://TileSets/Ground.tres" type="TileSet" id=4]

[node name="GroundTileSelectorButton" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="GroundTileSelectorPopup" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Display" parent="." instance=ExtResource( 3 )]
tile_set = ExtResource( 4 )
size = Vector2( 64, 64 )
tile_id = 0
transposed = false
x_flipped = false
y_flipped = false

[connection signal="tile_selected" from="GroundTileSelectorPopup" to="." method="_on_GroundSelector_tile_selected"]
